--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,5 +3,7 @@ title: "Page Not Found"
 sitemap: false
 permalink: /404.html
 ---
-
+<center> <h1>404</h1>
 Sorry, but the page you were trying to view does not exist.
+![404](https://whancock6.github.io/sdss2/images/sleeping-dragon.png)
+</center>
